--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 body {
@@ -14,4 +14,8 @@ main {
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px black;
+}
+
+img.lado {
+    float: right;
 }
